--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -27,8 +27,8 @@ submissions:
     repo: https://github.com/adamcaron/adamcaron_io
     notes:    
   Max Millington:
-    repo: 
-    notes:  
+    repo: https://github.com/MaxMillington/CSS_HTML
+    notes:  I suck at CSS
   Justin Pease:
     repo: 
     notes:    
