--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -6,7 +6,7 @@ submissions:
     repo: https://github.com/mdorrance/task_manager
     notes:    
   Jason Wright:
-    repo: 
+    repo: https://github.com/noobjey/task_manager
     notes:  
   Marla Brizel:  
     repo: https://github.com/marlabrizel/task_manager
