Add 1505 TrafficSpy evals from Josh M.

--- a/1505/05_traffic_spy.yml
+++ b/1505/05_traffic_spy.yml
@@ -27,35 +27,23 @@ submissions:
     repository:
     setup_notes:
     instructor_evaluation: Josh M.
-      notes:
+      notes: Really solid project. Naturally using presenter pattern.
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
-  Erik Butcher, Lev Kravinsky, Whitney Hiemstra:
-    repository:
-    setup_notes:
-    instructor_evaluation:
-      notes:
-      rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 4
+        Test-Driven Development: 3.5
+        Encapsulation / Components: 4
+        Fundamental Ruby & Style: 4
+        Sinatra / Web and Business Logic: 4
+        View Layer: 3
   Sebastian, Drew, Max, Jai:
     repository:
     setup_notes:
     instructor_evaluation:
       notes:
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 3.5
+        Test-Driven Development: 4
+        Encapsulation / Components: 3.5
+        Fundamental Ruby & Style: 3
+        Sinatra / Web and Business Logic: 3
+        View Layer: 3.5
