--- a/1505/05_traffic_spy.yml
+++ b/1505/05_traffic_spy.yml
@@ -1,28 +1,28 @@
 submissions:
   Marla, Lovisa, Mike:
-    repository:
+    repository: https://github.com/applegrain/traffic-spy
     setup_notes:
     instructor_evaluation: Rachel
       notes:
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 3.5
+        Test-Driven Development: 4
+        Encapsulation / Components: 3.5
+        Fundamental Ruby & Style: 4
+        Sinatra / Web and Business Logic: 4
+        View Layer: 3.5
   Mitch, David, Jason:
-    repository:
+    repository: https://github.com/mitchashby16/traffic_spy
     setup_notes:
     instructor_evaluation: Rachel
-      notes:
+      notes: 
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 3
+        Test-Driven Development: 3
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 2.5
+        Sinatra / Web and Business Logic: 3
+        View Layer: 3
   Adam, Alex, Michael, Samson:
     repository:
     setup_notes:
