--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -57,5 +57,5 @@ submissions:
     repo:
     notes:
   Justin Holzmann:
-    repo:
-    notes:
+    repo: https://github.com/philmphoenix/web_guesser
+    notes: Implemented all extensions
