--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -57,5 +57,5 @@ submissions:
     repo:
     notes:
   Justin Holzmann:
-    repo:
-    notes:
+    repo: https://github.com/philmphoenix/task_manager
+    notes: Through once
