Alon Waisman - web guesser complete

--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -12,8 +12,8 @@ submissions:
     repo:
     notes:
   Alon Waisman:
-    repo:
-    notes:
+    repo: https://github.com/MowAlon/web_guesser
+    notes: The SECRET NUMBER is 42
   Chris Cenatiempo:
     repo:
     notes:
