Added my repo and website url

--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -30,8 +30,8 @@ submissions:
     repo:
     url:
   Regis Boudinot:
-    repo:
-    url:
+    repo: https://github.com/selfup/selfup.github.io
+    url: http://selfup.me
   Adam Jensen:
     repo:
     url:
