--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -1,7 +1,7 @@
 submissions:
   Bret Doucette:
-    repo:
-    notes:
+    repo: https://github.com/bad6e/Web_Guesser
+    notes: The price is right!
   Travis Haby:
     repo:
     notes:
