--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -6,7 +6,7 @@ submissions:
     repo:
     notes:
   Rose Kohn:
-    repo:
+    repo: https://github.com/roseak/web_guesser
     notes:
   Mary Beth Burch:
     repo:
