Awesome! Feels good :)

--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -30,8 +30,8 @@ submissions:
     repo:
     notes:
   Regis Boudinot:
-    repo:
-    notes:
+    repo: https://github.com/selfup/web_guesser
+    notes: It changes colors!! (Extension)
   Adam Jensen:
     repo:
     notes:
