--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -18,7 +18,7 @@ submissions:
     repo:
     notes:
   Mimi Schatz:
-    repo:
+    repo: https://github.com/mcschatz/web_guesser
     notes:
   Ryan Asensio:
     repo:
