Update with ewell repo

--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -27,7 +27,7 @@ submissions:
     repo:
     notes:
   Matt Ewell:
-    repo:
+    repo: https://github.com/plato721/web_guesser
     notes:
   Regis Boudinot:
     repo: https://github.com/selfup/web_guesser
