--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -59,3 +59,6 @@ submissions:
   Justin Holzmann:
     repo: https://github.com/philmphoenix/web_guesser
     notes: Implemented all extensions
+  Rebekah Sosa:
+    repo: https://github.com/rebekahsosa/web_guesser
+    
