--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -1,7 +1,7 @@
 submissions:
   Bret Doucette:
-    repo:
-    notes:
+    repo: https://github.com/bad6e/Task_Manager
+    notes: First Attempt
   Travis Haby:
     repo:
     notes:
