--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -6,8 +6,8 @@ submissions:
     repo:
     url:
   Rose Kohn:
-    repo:
-    url:
+    repo: https://github.com/roseak/personal_website
+    url: rosekohn.com (WIP)
   Mary Beth Burch:
     repo:
     url:
