--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -39,8 +39,8 @@ submissions:
     repo:
     notes:
   Matt Hecker:
-    repo:
-    notes:
+    repo: https://github.com/HoffsMH/web_guesser
+    notes:Did extensions
   George Hudson:
     repo:
     notes:
