--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -39,8 +39,8 @@ submissions:
     repo:
     url:
   Matt Hecker:
-    repo:
-    url:
+    repo: https://github.com/HoffsMH/websiteV1
+    url: mhecker.com
   George Hudson:
     repo:
     url:
