--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -8,9 +8,9 @@ submissions:
   Rose Kohn:
     repo:
     url:
-  Mary Beth Burch:
-    repo:
-    url:
+  Mary Beth Burch: 
+    repo: https://github.com/mbburch/mbburch.github.io
+    url: http://mbburch.github.io/
   Alon Waisman:
     repo:
     url:
