--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -1,7 +1,7 @@
 submissions:
   Bret Doucette:
     repo: https://github.com/bad6e/bad6e.github.io
-    url: http://bad6e.github.io/
+    url: bretdoucette.com
   Travis Haby:
     repo:
     url:
