--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -21,8 +21,8 @@ submissions:
     repo:
     url:
   Ryan Asensio:
-    repo:
-    url:
+    repo: https://github.com/rasensio1/rasensio1.github.io
+    url: http://rasensio1.github.io/
   Michael Wong:
     repo:
     url:
