Alon Waisman - personal website

--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -12,8 +12,8 @@ submissions:
     repo:
     url:
   Alon Waisman:
-    repo:
-    url:
+    repo: https://github.com/MowAlon/mowalon_dot_com.git
+    url: http://mowalon.com
   Chris Cenatiempo:
     repo:
     url:
