--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -42,7 +42,7 @@ submissions:
     repo: https://github.com/HoffsMH/web_guesser
     notes:Did extensions
   George Hudson:
-    repo:
+    repo: https://github.com/Egogre/web_guesser
     notes:
   Russell Harms:
     repo:
