--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -54,8 +54,8 @@ submissions:
     repo:
     url:
   David Stinnette:
-    repo:
-    url:
+    repo: https://github.com/dastinnette/dastinnette.github.io
+    url: http://dastinnette.github.io/
   Justin Holzmann:
     repo:
     url:
