--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -27,8 +27,8 @@ submissions:
     repo:
     url:
   Matt Ewell:
-    repo:
-    url:
+    repo: https://github.com/plato721/plato721.github.io
+    url: http://plato721.github.io/
   Regis Boudinot:
     repo: https://github.com/selfup/selfup.github.io
     url: http://selfup.me
