--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -21,7 +21,7 @@ submissions:
     repo: https://github.com/mcschatz/web_guesser
     notes:
   Ryan Asensio:
-    repo:
+    repo:https://github.com/rasensio1/webguesser
     notes:
   Michael Wong:
     repo:
