--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -21,7 +21,7 @@ submissions:
     repo:
     notes:
   Ryan Asensio:
-    repo:
+    repo:https://github.com/rasensio1/task_manager
     notes:
   Michael Wong:
     repo:
