--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -42,7 +42,7 @@ submissions:
     repo: https://github.com/HoffsMH/websiteV1
     url: mhecker.com
   George Hudson:
-    repo:
+    repo: https://github.com/Egogre/blackheart
     url:
   Russell Harms:
     repo:
