--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -57,5 +57,5 @@ submissions:
     repo:
     url:
   Justin Holzmann:
-    repo:
-    url:
+    repo: https://github.com/philmphoenix/philmphoenix.github.io
+    url:  philmphoenix.github.io
