--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -51,8 +51,8 @@ submissions:
     repo:
     notes:
   Justin Pease:
-    repo:
-    notes:
+    repo:https://github.com/Jpease1020/Task_Manager-
+    notes:First time
   David Stinnette:
     repo:
     notes:
