--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -39,7 +39,7 @@ submissions:
     repo:
     notes:
   Matt Hecker:
-    repo:
+    repo: https://github.com/HoffsMH/task_manager
     notes:
   George Hudson:
     repo:
