--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -33,8 +33,8 @@ submissions:
     repo: https://github.com/selfup/selfup.github.io
     url: http://selfup.me
   Adam Jensen:
-    repo:
-    url:
+    repo:https://github.com/adamki
+    url:http://adamki.github.io/
   Jeff Ruane:
     repo:
     url:
