Alon's task_manager completed

--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -12,8 +12,8 @@ submissions:
     repo:
     notes:
   Alon Waisman:
-    repo:
-    notes:
+    repo: https://github.com/MowAlon/task_manager.git
+    notes: Gotta go make some yumyum noms
   Chris Cenatiempo:
     repo:
     notes:
