--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -9,7 +9,7 @@ submissions:
     repo:
     notes:
   Mary Beth Burch:
-    repo:
+    repo: https://github.com/bad6e/Task_Manager
     notes:
   Alon Waisman:
     repo:
