--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -15,8 +15,8 @@ submissions:
     repo: https://github.com/MowAlon/mowalon_dot_com.git
     url: http://mowalon.com
   Chris Cenatiempo:
-    repo:
-    url:
+    repo:https://github.com/ChrisCenatie/ChrisCenatie.github.io
+    url:http://chriscenatie.github.io/
   Mimi Schatz:
     repo:
     url:
