--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -27,7 +27,7 @@ submissions:
     repo:
     notes:
   Matt Ewell:
-    repo:
+    repo: https://github.com/plato721/task-manager
     notes:
   Regis Boudinot:
     repo:
