--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -30,8 +30,8 @@ submissions:
     repo:
     notes:
   Regis Boudinot:
-    repo:
-    notes:
+    repo: https://github.com/selfup/task_manager
+    notes: Woop! It manages tasks
   Adam Jensen:
     repo:
     notes:
