--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -59,3 +59,6 @@ submissions:
   Justin Holzmann:
     repo: https://github.com/philmphoenix/philmphoenix.github.io
     url:  philmphoenix.github.io
+  Rebekah Sosa
+    repo: https://github.com/rebekahsosa/rebekahsosa.github.io
+    url: https://rebekahsosa.github.io/
