--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -9,7 +9,7 @@ submissions:
     repo:
     notes:
   Mary Beth Burch:
-    repo: https://github.com/bad6e/Task_Manager
+    repo: https://github.com/mbburch/task_manager
     notes:
   Alon Waisman:
     repo: https://github.com/MowAlon/task_manager.git
