--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -50,9 +50,9 @@ submissions:
   Jerrod Paul Junker:
     repo:
     notes:
-  Justin Pease:
+  Justin Pease: https://github.com/Jpease1020/Web-guesser
     repo:
-    notes:
+    notes: Still working on extentions
   David Stinnette:
     repo: https://github.com/dastinnette/web_guesser
     notes: Note the tasteful use of "hotpink"
