--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -33,8 +33,8 @@ submissions:
     repo: https://github.com/selfup/task_manager
     notes: Woop! It manages tasks
   Adam Jensen:
-    repo:
-    notes:
+    repo:https://github.com/adamki/task-manager
+    notes:completed
   Jeff Ruane:
     repo:
     notes:
