--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -51,8 +51,8 @@ submissions:
     repo:
     url:
   Justin Pease:
-    repo:
-    url:
+    repo: http://github.com/Jpease1020/Jpease1020.github.io/
+    url: http://jpease1020.github.io/
   David Stinnette:
     repo: https://github.com/dastinnette/dastinnette.github.io
     url: http://dastinnette.github.io/
