--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -36,7 +36,7 @@ submissions:
     repo:https://github.com/adamki/task-manager
     notes:completed
   Jeff Ruane:
-    repo:
+    repo: https://github.com/jbrr/task_manager
     notes:
   Matt Hecker:
     repo: https://github.com/HoffsMH/task_manager
