--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -18,8 +18,8 @@ submissions:
     repo:
     notes:
   Mimi Schatz:
-    repo:
-    notes:
+    repo: https://github.com/mcschatz/task_manager
+    notes: clean that apt kids
   Ryan Asensio:
     repo:https://github.com/rasensio1/task_manager
     notes:
