--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -54,8 +54,8 @@ submissions:
     repo:https://github.com/Jpease1020/Task_Manager-
     notes:First time
   David Stinnette:
-    repo:
-    notes:
+    repo: https://github.com/dastinnette/task_manager
+    notes: First pass
   Justin Holzmann:
     repo: https://github.com/philmphoenix/task_manager
     notes: Through once
