--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -59,3 +59,6 @@ submissions:
   Justin Holzmann:
     repo: https://github.com/philmphoenix/task_manager
     notes: Through once
+  Rebekah Sosa:
+    repo: https://github.com/rebekahsosa/task_manager
+    notes:
