--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -45,7 +45,7 @@ submissions:
     repo: https://github.com/Egogre/web_guesser
     notes:
   Russell Harms:
-    repo:
+    repo: https://github.com/russelleh/task_manager
     notes:
   Jerrod Paul Junker:
     repo:
