--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -45,8 +45,8 @@ submissions:
     repo: https://github.com/Egogre/blackheart
     url:
   Russell Harms:
-    repo:
-    url:
+    repo: https://github.com/russelleh/russelleh.github.io
+    url: https://russelleh.github.io
   Jerrod Paul Junker:
     repo:
     url:
