--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -36,8 +36,8 @@ submissions:
     repo:https://github.com/adamki
     url:http://adamki.github.io/
   Jeff Ruane:
-    repo:
-    url:
+    repo: https://github.com/jbrr/website
+    url: https://jbrr.github.io/website
   Matt Hecker:
     repo: https://github.com/HoffsMH/websiteV1
     url: mhecker.com
