--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -24,8 +24,8 @@ submissions:
     repo:https://github.com/rasensio1/task_manager
     notes:
   Michael Wong:
-    repo:
-    notes:
+    repo: https://github.com/Kealii/task_manager
+    notes: Once around
   Matt Ewell:
     repo: https://github.com/plato721/task-manager
     notes:
