--- a/1507/module_2_prep/task-manager.yml
+++ b/1507/module_2_prep/task-manager.yml
@@ -15,8 +15,8 @@ submissions:
     repo: https://github.com/MowAlon/task_manager.git
     notes: Gotta go make some yumyum noms
   Chris Cenatiempo:
-    repo:
-    notes:
+    repo:https://github.com/ChrisCenatie/task_manager
+    notes: My sinuses are killing me. I will try to go through this one more time tonight
   Mimi Schatz:
     repo: https://github.com/mcschatz/task_manager
     notes: clean that apt kids
