--- a/1507/module_2_prep/personal-html-css.yml
+++ b/1507/module_2_prep/personal-html-css.yml
@@ -18,8 +18,8 @@ submissions:
     repo:https://github.com/ChrisCenatie/ChrisCenatie.github.io
     url:http://chriscenatie.github.io/
   Mimi Schatz:
-    repo:
-    url:
+    repo: https://github.com/mcschatz/mcschatz.github.io
+    url: mimischatz.com
   Ryan Asensio:
     repo: https://github.com/rasensio1/rasensio1.github.io
     url: http://rasensio1.github.io/
