--- a/1507/07-traffic-spy.yml
+++ b/1507/07-traffic-spy.yml
@@ -47,3 +47,44 @@ submissions:
         Fundamental Ruby & Style:
         Sinatra / Web and Business Logic:
         View Layer:
+
+Bret and Justin and Justin:
+  repository: https://github.com/jpease1020/traffic-spy
+    setup_notes: Clone repo, yolo, shotgun, test script
+    instructor_evaluation: Mike
+      notes:
+        * Some better separation of tests could be used.
+        * Some methods were very long
+        * Some lines > 80 characters
+        * Would like to have seen better breaking out of view into partials.
+        * 275 assertions, test coverage was 98 percent 65 tests
+        * Design was clean
+        * Worked as advertised.
+      rubric:
+        Functional Expectations: 3
+        Test-Driven Development: 3
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3
+        Sinatra / Web and Business Logic: 3
+        View Layer: 3*
+
+George and Mary Beth and Chris
+  repository: http://github.com/mbburch/traffic-spy
+    setup_notes:
+    instructor_evaluation: Mike
+      notes:
+        * Good pulling out of things into partials
+        * Methods in controller were a little heavy and could stand to be
+        refactored
+        * Good use of helper classes, would like to have seen more
+        * More logic could be pushed to the models
+        * design was pleasant
+        * JSon works, and campaigns work
+        * 38 tests
+      rubric:
+        Functional Expectations: 4
+        Test-Driven Development: 3
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 4
+        Sinatra / Web and Business Logic: 4
+        View Layer: 3
