--- a/1507/07-traffic-spy.yml
+++ b/1507/07-traffic-spy.yml
@@ -1,49 +1,53 @@
 submissions:
   Regis, David, Jerrod:
-    repository:
+    repository: https://github.com/dastinnette/traffic-spy
     setup_notes:
+    group_discussion_notes: https://gist.github.com/selfup/e36ee298f1b88913785b
     instructor_evaluation: Josh M.
-      notes:
+      notes: Missing error message for 403s. OS, Screen Res, and Browser breakdown is incomplete.
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 1.5
+        Test-Driven Development: 4
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3
+        Sinatra / Web and Business Logic: 3
+        View Layer: 3
   Travis and Matt and Adam:
-    repository:
+    repository: https://github.com/travishaby/traffic_spy
     setup_notes:
+    group_discussion_notes: https://gist.github.com/travishaby/c873b65c804095812f23
     instructor_evaluation: Josh M.
       notes:
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 4
+        Test-Driven Development: 4
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3
+        Sinatra / Web and Business Logic: 4
+        View Layer: 3
   Jeff and Alon and Michael and Mimi:
     repository:
     setup_notes:
+    group_discussion_notes: https://gist.github.com/Kealii/2cb124bd7f287e1a6c69
     instructor_evaluation: Josh M.
       notes:
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 3
+        Test-Driven Development: 4
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3
+        Sinatra / Web and Business Logic: 3
+        View Layer: 4
   Rose and Ryan and Matt and Russell:
     repository:
     setup_notes:
+    group_discussion_notes: https://gist.github.com/rasensio1/fe9fe922a2e7b511c880
     instructor_evaluation: Josh M.
       notes:
       rubric:
-        Functional Expectations:
-        Test-Driven Development:
-        Encapsulation / Components:
-        Fundamental Ruby & Style:
-        Sinatra / Web and Business Logic:
-        View Layer:
+        Functional Expectations: 3
+        Test-Driven Development: 4
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3
+        Sinatra / Web and Business Logic: 3
+        View Layer: 3
