personal website repo + url

--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -54,8 +54,8 @@ submissions:
     repo:
     url:
   Emily Dowdle:
-    repo:
-    url:
+    repo: https://github.com/emilydowdle/html_personal_website
+    url: http://model-stuart-70504.bitballoon.com/
   Charissa Lawrence:
     repo:
     url:
