web_guesser repo
Could you clarify how we're supposed to have a URL for our program?

--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -54,8 +54,8 @@ submissions:
     repo:
     url:
   Emily Dowdle:
-    repo:
-    url:
+    repo: https://github.com/emilydowdle/web_guesser
+    url: 
   Charissa Lawrence:
     repo:
     url:
