--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -9,7 +9,7 @@ submissions:
     repo:
     url:
   Torie Warren:
-    repo:
+    repo: https://github.com/toriejw/web-guesser
     url:
   Jhun de Andres:
     repo:
