--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -15,8 +15,8 @@ submissions:
     repo:
     url:
   Pat Wey:
-    repo:
-    url:
+    repo: github.com/patwey/patwey.github.io
+    url: patwey.github.io
   Aaron Careaga:
     repo:
     url:
