added https:// to my link

--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -15,7 +15,7 @@ submissions:
     repo:
     url:
   Pat Wey:
-    repo: github.com/patwey/web_guesser
+    repo: https://github.com/patwey/web_guesser
   Aaron Careaga:
     repo:
     url:
