--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -63,7 +63,7 @@ submissions:
     repo:
     url:
   Shannon Paige:
-    repo:
+    repo: https://github.com/ShannonPaige/web_guesser
     url:
   John Slota:
     repo:
