--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -24,8 +24,8 @@ submissions:
     repo:
     url:
   Ross Edfort:
-    repo:
-    url:
+    repo: https://github.com/rossedfort/rossedfort.github.io
+    url: http://rossedfort.github.io/
   Marlo Major:
     repo:
     url:
