--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -45,7 +45,7 @@ submissions:
     repo:
     url:
   Matt Stjernholm:
-    repo:
+    repo: https://github.com/thew88/web_guesser
     url:
   Matt Rooney:
     repo:
