--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -9,8 +9,8 @@ submissions:
     repo:
     url:
   Torie Warren:
-    repo:
-    url:
+    repo: https://github.com/toriejw/toriejw.github.io
+    url: toriejoywarren.com
   Jhun de Andres:
     repo:
     url:
