--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -18,7 +18,7 @@ submissions:
     repo:
     url:
   Aaron Careaga:
-    repo:
+    repo: https://github.com/acareaga/web_guesser
     url:
   Penney Garrett:
     repo:
