--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -48,8 +48,8 @@ submissions:
     repo:
     url:
   Matt Rooney:
-    repo:
-    url:
+    repo: Web-Guesser
+    url: https://github.com/MattRooney/Web-Guesser
   Edgar Duran:
     repo:
     url:
