added my repo to webguesser.yml

--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -60,8 +60,8 @@ submissions:
     repo:
     url:
   Robbie Lane:
-    repo:
-    url:
+    repo: https://github.com/robbielane/web_guesser
+    url: none
   Shannon Paige:
     repo:
     url:
