--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -32,7 +32,7 @@ submissions:
     repo:
     url:
   Amber Crawford:
-    repo:
+    repo: https://github.com/amcrawford/web_guesser
     url:
   Ryan Johnson:
     repo:
