Push to turing repo

--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -35,7 +35,7 @@ submissions:
     repo:
     url:
   Ryan Johnson:
-    repo:
+    repo: https://github.com/rjohnson4444/web_guesser
     url:
   Sekhar Paladugu:
     repo:
@@ -54,7 +54,7 @@ submissions:
     url:
   Emily Dowdle:
     repo: https://github.com/emilydowdle/web_guesser
-    url: 
+    url:
   Charissa Lawrence:
     repo:
     url:
