web guesser added
https://github.com/NicoleHall/Web-Guesser

--- a/1507/module_2_prep/webguesser.yml
+++ b/1507/module_2_prep/webguesser.yml
@@ -61,4 +61,7 @@ submissions:
     notes: Implemented all extensions
   Rebekah Sosa:
     repo: https://github.com/rebekahsosa/web_guesser
+    
+    Nicole Hall
+    repo: https://github.com/NicoleHall/Web-Guesser
 
