--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -12,7 +12,7 @@ submissions:
     repo: https://github.com/toriejw/web-guesser
     url:
   Jhun de Andres:
-    repo:
+    repo: https://github.com/joshuajhun/web_guesser
     url:
   Pat Wey:
     repo: https://github.com/patwey/web_guesser
@@ -54,7 +54,7 @@ submissions:
     url:
   Emily Dowdle:
     repo: https://github.com/emilydowdle/web_guesser
-    url: 
+    url:
   Charissa Lawrence:
     repo:
     url:
