--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -1,6 +1,6 @@
 submissions:
   Tyler Komoroske:
-    repo:
+    repo: https://github.com/tjkomor/web_guesser
     url:
   Chad Minnerath:
     repo:
