finished task manager
such a neat little project!

--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -54,7 +54,7 @@ submissions:
     repo:
     url:
   Emily Dowdle:
-    repo:
+    repo: https://github.com/emilydowdle/task_manager
     url:
   Charissa Lawrence:
     repo:
