--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -38,8 +38,7 @@ submissions:
     repo:
     url:
   Sekhar Paladugu:
-    repo:
-    url:
+    repo: https://github.com/sekharp/web_guesser
   Jason Pilz:
     repo: https://github.com/jasonpilz/WebGuesser
     url:
