--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -26,8 +26,8 @@ submissions:
     repo: https://github.com/rossedfort/web_guesser
     url:
   Marlo Major:
-    repo:
-    url:
+    repo: web_guesser
+    url:https://github.com/marlomajor/web_guesser
   Jill Donohue:
     repo:
     url:
