--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -3,7 +3,7 @@ submissions:
     repo:
     url:
   Chad Minnerath:
-    repo:
+    repo: https://github.com/cminnerath/web_guesser.git
     url:
   Nicole Hall:
     repo:
