--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -55,7 +55,7 @@ submissions:
     repo: https://github.com/emilydowdle/web_guesser
     url:
   Charissa Lawrence:
-    repo:
+    repo: https://github.com/JaggedLaw/web_guesser.git
     url:
   Robbie Lane:
     repo: https://github.com/robbielane/web_guesser
