--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -42,8 +42,8 @@ submissions:
     repo:
     url:
   Jason Pilz:
-    repo:
-    url:
+    repo: https://github.com/jasonpilz/jasonpilz.github.io.git
+    url: http://jasonpilz/github.io
   Matt Stjernholm:
     repo:
     url:
