Shannon Paige HTML

--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -63,8 +63,8 @@ submissions:
     repo:
     url:
   Shannon Paige:
-    repo:
-    url:
+    repo: https://github.com/ShannonPaige/ShannonPaige.github.io
+    url: http://shannonpaige.github.io/
   John Slota:
     repo:
     url:
