Cole Hall Web Guesser Added
Cole Hall Web Guesser Added

--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -5,8 +5,8 @@ submissions:
   Chad Minnerath:
     repo: https://github.com/cminnerath/web_guesser.git
     url:
-  Nicole Hall:
-    repo:
+  Cole Hall:
+    repo: https://github.com/NicoleHall/Web-Guesser
     url:
   Torie Warren:
     repo: https://github.com/toriejw/web-guesser
