--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -18,8 +18,8 @@ submissions:
     repo: https://github.com/patwey/patwey.github.io
     url: https://patwey.github.io
   Aaron Careaga:
-    repo:
-    url:
+    repo: https://github.com/acareaga/acareaga.github.io
+    url: https://acareaga.github.io/
   Penney Garrett:
     repo:
     url:
