--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -1,7 +1,7 @@
 submissions:
   Tyler Komoroske:
-    repo:
-    url:
+    repo: https://github.com/tjkomor/tjkomor.github.io
+    url: https://tjkomor.github.io
   Chad Minnerath:
     repo:
     url:
