--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -12,8 +12,8 @@ submissions:
     repo: https://github.com/toriejw/toriejw.github.io
     url: toriejoywarren.com
   Jhun de Andres:
-    repo:
-    url:
+    repo: https://github.com/joshuajhun/joshuajhun.github.io
+    url:  http://joshuajhun.github.io.
   Pat Wey:
     repo: https://github.com/patwey/patwey.github.io
     url: https://patwey.github.io
