Added personal website repo and url

--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -36,8 +36,8 @@ submissions:
     repo:
     url:
   Ryan Johnson:
-    repo:
-    url:
+    repo: https://github.com/rjohnson4444/rjohnson4444.github.io
+    url: http://rjohnson4444.github.io
   Sekhar Paladugu:
     repo:
     url:
