--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -33,8 +33,8 @@ submissions:
     repo:
     url:
   Amber Crawford:
-    repo:
-    url:
+    repo: https://github.com/amcrawford/personal-page/tree/gh-pages
+    url: http://amcrawford.github.io/personal-page/
   Ryan Johnson:
     repo:
     url:
