Charissa website added

--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -57,8 +57,8 @@ submissions:
     repo: https://github.com/emilydowdle/html_personal_website
     url: http://model-stuart-70504.bitballoon.com/
   Charissa Lawrence:
-    repo:
-    url:
+    repo: https://github.com/JaggedLaw/JaggedLaw.github.io.git
+    url: http://jaggedLaw.github.io
   Robbie Lane:
     repo:
     url:
