--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -45,7 +45,7 @@ submissions:
     repo:
     url:
   Matt Stjernholm:
-    repo:
+    repo: https://github.com/thew88/task_manager
     url:
   Matt Rooney:
     repo:
