--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -9,7 +9,7 @@ submissions:
     repo:
     url:
   Torie Warren:
-    repo:
+    repo: https://github.com/toriejw/task-manager
     url:
   Jhun de Andres:
     repo:
