--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -45,8 +45,8 @@ submissions:
     repo: https://github.com/jasonpilz/jasonpilz.github.io.git
     url: http://jasonpilz/github.io
   Matt Stjernholm:
-    repo:
-    url:
+    repo: https://github.com/thew88/mattswebsite
+    url: https://matts-personal-website.herokuapp.com/
   Matt Rooney:
     repo:
     url:
