--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -18,7 +18,7 @@ submissions:
     repo:
     url:
   Aaron Careaga:
-    repo:
+    repo: https://github.com/acareaga/task_manager
     url:
   Penney Garrett:
     repo:
