--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -48,8 +48,8 @@ submissions:
     repo: https://github.com/thew88/mattswebsite
     url: https://matts-personal-website.herokuapp.com/
   Matt Rooney:
-    repo:
-    url:
+    repo:https://github.com/MattRooney/personal-website
+    url:http://www.matthewjrooney.com/
   Edgar Duran:
     repo:
     url:
