--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -42,7 +42,7 @@ submissions:
     repo:
     url:
   Jason Pilz:
-    repo:
+    repo: https://github.com/jasonpilz/TaskManager
     url:
   Matt Stjernholm:
     repo:
