--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -48,7 +48,7 @@ submissions:
     repo: https://github.com/thew88/task_manager
     url:
   Matt Rooney:
-    repo:
+    repo: https://github.com/MattRooney/task-manager
     url:
   Edgar Duran:
     repo:
