--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -36,7 +36,7 @@ submissions:
     repo:
     url:
   Ryan Johnson:
-    repo:
+    repo: https://github.com/rjohnson4444/task_manager
     url:
   Sekhar Paladugu:
     repo:
