--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -39,8 +39,8 @@ submissions:
     repo: https://github.com/rjohnson4444/rjohnson4444.github.io
     url: http://rjohnson4444.github.io
   Sekhar Paladugu:
-    repo:
-    url:
+    repo: https://github.com/sekharp/sekharp.github.io
+    url: http://sekharp.github.io/
   Jason Pilz:
     repo: https://github.com/jasonpilz/jasonpilz.github.io.git
     url: http://jasonpilz/github.io
