Shannon Paige Task Manager

--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -63,7 +63,7 @@ submissions:
     repo:
     url:
   Shannon Paige:
-    repo:
+    repo:https://github.com/ShannonPaige/task_manager
     url:
   John Slota:
     repo:
