--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -24,7 +24,7 @@ submissions:
     repo:
     url:
   Ross Edfort:
-    repo:
+    repo: https://github.com/rossedfort/task_manager
     url:
   Marlo Major:
     repo:
