added link to repo for Pat Wey

--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -15,7 +15,7 @@ submissions:
     repo:
     url:
   Pat Wey:
-    repo:
+    repo: https://github.com/patwey/task_manager
     url:
   Aaron Careaga:
     repo:
