--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -12,8 +12,8 @@ submissions:
     repo: https://github.com/toriejw/task-manager
     url:
   Jhun de Andres:
-    repo:
-    url:
+    repo: https://github.com/joshuajhun/task_manager-
+    url: 
   Pat Wey:
     repo:
     url:
