Link to Cole's personal website
https://github.com/NicoleHall/NicoleHall.github.io

--- a/1508/module_2_prep/webguesser.yml
+++ b/1508/module_2_prep/webguesser.yml
@@ -7,7 +7,7 @@ submissions:
     url:
   Cole Hall:
     repo: https://github.com/NicoleHall/Web-Guesser
-    url:
+    url: https://github.com/NicoleHall/NicoleHall.github.io
   Torie Warren:
     repo: https://github.com/toriejw/web-guesser
     url:
