--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -33,7 +33,7 @@ submissions:
     repo:
     url:
   Amber Crawford:
-    repo:
+    repo: https://github.com/amcrawford/task-manager
     url:
   Ryan Johnson:
     repo:
