--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -60,7 +60,7 @@ submissions:
     repo:
     url:
   Robbie Lane:
-    repo:
+    repo: https://github.com/robbielane/task_manager
     url:
   Shannon Paige:
     repo:
