--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -39,7 +39,7 @@ submissions:
     repo:
     url:
   Sekhar Paladugu:
-    repo:
+    repo: https://github.com/sekharp/task-manager
     url:
   Jason Pilz:
     repo:
