--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -1,6 +1,6 @@
 submissions:
   Tyler Komoroske:
-    repo:
+    repo: https://github.com/tjkomor/task_manager
     url:
   Chad Minnerath:
     repo:
