--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -3,7 +3,7 @@ submissions:
     repo:
     url:
   Chad Minnerath:
-    repo:
+    repo: https://github.com/cminnerath/task_manager
     url:
   Nicole Hall:
     repo:
