Charissa repo added

--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -57,7 +57,7 @@ submissions:
     repo: https://github.com/emilydowdle/task_manager
     url:
   Charissa Lawrence:
-    repo:
+    repo: https://github.com/JaggedLaw/task_manager.git
     url:
   Robbie Lane:
     repo: https://github.com/robbielane/task_manager
