--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -66,7 +66,7 @@ submissions:
     repo:https://github.com/ShannonPaige/task_manager
     url:
   John Slota:
-    repo:
+    repo: https://github.com/slotaj/task-manager
     url:
   Rebekah Sosa:
     repo: https://github.com/rebekahsosa/rebekahsosa.github.io
