added Cole's task manager
added Cole's task manager

--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -6,7 +6,7 @@ submissions:
     repo: https://github.com/cminnerath/task_manager
     url:
   Nicole Hall:
-    repo:
+    repo: https://github.com/NicoleHall/task-manager
     url:
   Torie Warren:
     repo: https://github.com/toriejw/task-manager
