--- a/1508/module_2_prep/personal-html-css.yml
+++ b/1508/module_2_prep/personal-html-css.yml
@@ -60,8 +60,8 @@ submissions:
     repo: https://github.com/JaggedLaw/JaggedLaw.github.io.git
     url: http://jaggedLaw.github.io
   Robbie Lane:
-    repo:
-    url:
+    repo: https://github.com/robbielane/robbielane.github.io
+    url: http://robbielane.net
   Shannon Paige:
     repo: https://github.com/ShannonPaige/ShannonPaige.github.io
     url: http://shannonpaige.github.io/
