--- a/1508/module_2_prep/task-manager.yml
+++ b/1508/module_2_prep/task-manager.yml
@@ -27,7 +27,7 @@ submissions:
     repo: https://github.com/rossedfort/task_manager
     url:
   Marlo Major:
-    repo:
+    repo:https://github.com/marlomajor/Task_Manager
     url:
   Jill Donohue:
     repo:
