Updated repo for Skill Inventory
 Database conversion from YAML to Sequel

--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -34,7 +34,7 @@ submissions:
   Edgar Duran:
     repo:
   Emily Dowdle:
-    repo: 
+    repo: https://github.com/emilydowdle/skill-inventory-crud
   Charissa Lawrence:
     repo: 
   Robbie Lane:
