--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -21,8 +21,8 @@ submissions:
     repo:
     notes:
   Ryan Asensio:
-    repo:
-    notes:
+    repo:https://github.com/rasensio1/mastermind
+    notes: Boom
   Michael Wong:
     repo:
     notes:
