--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -32,7 +32,7 @@ submissions:
   Regis Boudinot:
     repo:
     notes:
-  Adam Jensen:
+  Adam Jensen:https://github.com/adamki/mastermind-challenge
     repo:
     notes:
   Jeff Ruane:
