--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -36,7 +36,7 @@ submissions:
     repo:
     notes:
   Jeff Ruane:
-    repo:
+    repo: https://github.com/jbrr/mastermind
     notes:
   Matt Hecker:
     repo:
