--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -15,8 +15,8 @@ submissions:
     repo:
     notes:
   Chris Cenatiempo:
-    repo:
-    notes:
+    repo:https://github.com/ChrisCenatie/mastermind
+    notes: HankHankHank
   Mimi Schatz:
     repo:
     notes:
