--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -9,7 +9,7 @@ submissions:
     repo:
     notes:
   Mary Beth Burch:
-    repo:
+    repo: https://github.com/mbburch/mastermind
     notes:
   Alon Waisman:
     repo:
