--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -57,8 +57,8 @@ submissions:
     repo:
     notes:
   Jason Wright:
-    repo:
-    notes:
+    repo: https://github.com/noobjey/mastermind
+    notes: I didn't get real far. But that was fun.
   Stanley Siudzinski:
     repo:
     notes:
