--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -54,7 +54,7 @@ submissions:
     repo:
     notes:
   Justin Holzmann:
-    repo:
+    repo: https://github.com/jphoenix86/mastermind
     notes:
   Jason Wright:
     repo: https://github.com/noobjey/mastermind
