Add Matt Ewell repo

--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -27,7 +27,7 @@ submissions:
     repo:
     notes:
   Matt Ewell:
-    repo:
+    repo: https://github.com/plato721/mastermind.git
     notes:
   Regis Boudinot:
     repo:
