--- a/1507/08_mastermind.yml
+++ b/1507/08_mastermind.yml
@@ -30,7 +30,7 @@ submissions:
     repo: https://github.com/plato721/mastermind.git
     notes:
   Regis Boudinot:
-    repo:
+    repo: https://github.com/selfup/mastermind
     notes:
   Adam Jensen:
     repo:https://github.com/adamki/mastermind-challenge
