--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -16,7 +16,7 @@ submissions:
   Ross Edfort:
     repo: 
   Marlo Major:
-    repo:
+    repo:https://github.com/marlomajor/spicy_robot_world
   Jill Donohue:
     repo:
   Amber Crawford:
