--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -36,7 +36,7 @@ submissions:
   Emily Dowdle:
     repo: 
   Charissa Lawrence:
-    repo: 
+    repo: https://github.com/robbielane/robots
   Robbie Lane:
     repo: 
   Shannon Paige:
