Add Matt's Robot World

--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -28,7 +28,7 @@ submissions:
   Jason Pilz:
     repo: 
   Matt Stjernholm:
-    repo: 
+    repo: https://github.com/matt-stj/robot_world/tree/secondary
   Matt Rooney:
     repo: 
   Edgar Duran:
