--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -26,7 +26,7 @@ submissions:
   Sekhar Paladugu:
     repo: 
   Jason Pilz:
-    repo: 
+    repo: https://github.com/jasonpilz/skill-inventory-crud
   Matt Stjernholm:
     repo: 
   Matt Rooney:
