Submit repo for skill inventory - shannonpaige

--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -40,7 +40,7 @@ submissions:
   Robbie Lane:
     repo: 
   Shannon Paige:
-    repo:
+    repo: https://github.com/ShannonPaige/skill-inventory-crud
   John Slota:
     repo: 
   Rebekah Sosa:
