--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -22,7 +22,7 @@ submissions:
   Amber Crawford:
     repo: 
   Ryan Johnson:
-    repo: 
+    repo: https://github.com/rjohnson4444/skill-inventory-crud
   Sekhar Paladugu:
     repo: 
   Jason Pilz:
