Added link to repo for Pat Wey

--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -10,7 +10,7 @@ submissions:
   Jhun de Andres:
     repo:  
   Pat Wey:
-    repo: 
+    repo: https://github.com/patwey/robot_world
   Aaron Careaga:
     repo: 
   Ross Edfort:
