--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -5,8 +5,8 @@ submissions:
     repo: 
   Nicole Hall:
     repo: 
-  Torie Warren:
-    repo: 
+  Torie Joy-Warren:
+    repo: https://github.com/toriejw/robot-world
   Jhun de Andres:
     repo:  
   Pat Wey:
