--- a/1508/crud_app_sequel.yml
+++ b/1508/crud_app_sequel.yml
@@ -24,7 +24,7 @@ submissions:
   Ryan Johnson:
     repo: https://github.com/rjohnson4444/skill-inventory-crud
   Sekhar Paladugu:
-    repo: 
+    repo: https://github.com/sekharp/skill-inventory-crud
   Jason Pilz:
     repo: https://github.com/jasonpilz/skill-inventory-crud
   Matt Stjernholm:
